# grail

./: .gitattributes  .gitignore  ?  Cargo.toml  Makefile  README.md  benchmark.sh  merge_data.sh  positions.txt  rustfmt.toml  silver-openings.pgn  test.py  tournament-games.txt  uci.txt
.github/workflows/: auto-tag.yml  build.yml  ci.yml
books/: Blitz_Testing_4moves.epd  GrandPQRS-3moves-2358.epd  swcr-fq-openings-v4.1.epd
core/: Cargo.toml
core/benches/: search.rs
core/src/: args.rs  bench.rs  engine.rs  grail.rs  main.rs  nnue.rs  worker.rs
core/src/args/: mod.rs
docs/: uci.txt
evaluation/: Cargo.toml
evaluation/src/: def.rs  lib.rs  piece_values.rs  scores.rs  traits.rs
evaluation/src/hce/: config.rs  context.rs  eval_bishops.rs  eval_king.rs  eval_knights.rs  eval_material.rs  eval_pawns.rs  eval_queens.rs  eval_rooks.rs  eval_space.rs  eval_threats.rs  mod.rs  pawn_cache.rs  pst.rs
evaluation/src/traditional/: bonus.rs  eval_bishops.rs  eval_drawish.rs  eval_king.rs  eval_knights.rs  eval_material.rs  eval_pawns.rs  eval_queens.rs  eval_rooks.rs  eval_tempo.rs  evaluation.rs  mod.rs  pst.rs  values.rs
hce/: Cargo.toml
hce/src/: config.rs  eval_bishops.rs  eval_king.rs  eval_material.rs  eval_pawns.rs  eval_rooks.rs  eval_space.rs  eval_threats.rs  lib.rs  pawn_cache.rs
nnue/: Cargo.toml  DUAL_ACCUMULATOR.md  model.safetensors
nnue/src/: encoding.rs  evaluator.rs  lib.rs  network.rs  nnue.rs  samples.rs  version.rs
nnue/src/network/: accumulator.rs  inference.rs  linear.rs  mod.rs  model.rs  simd.rs
nnue/src/tests/: network_tests.rs
scripts/: run.sh  test.sh
search/: Cargo.toml
search/src/: config.rs  controller.rs  def.rs  engine.rs  lib.rs  qs_table.rs  stack.rs  time_budget.rs  tt_table.rs
search/src/engine/: eval.rs  extensions.rs  mod.rs  pruning.rs  quiescence.rs  reductions.rs  search.rs
search/src/extensions/: mod.rs  passed_pawn.rs
search/src/history/: capture_history.rs  continuation_history.rs  history_heuristic.rs  mod.rs  utils.rs
search/src/minimax/: engine.rs  utils.rs
search/src/move_ordering/: main.rs  mod.rs  quiescence.rs  utils.rs
search/src/negamax/: .controller.rs.swp  aspiration.rs  controller.rs  engine.rs  mod.rs  qs_table.rs  search.rs  search_controller.rs  search_stack.rs  time_budget.rs  trend.rs  tt.rs  tt_table.rs  utils.rs
search/src/pruning/: aspiration.rs  futility.rs  late_move.rs  mate_distance.rs  mod.rs  null_move.rs  reductions.rs
search/src/reductions/: mod.rs
search/src/time_control/: budget.rs  controller.rs  mod.rs  stats.rs
search/src/transposition/: main.rs  mod.rs  quiescence.rs
search/src/utils/: board.rs  capture_history.rs  castling.rs  continuation_history.rs  countermove.rs  countermove_heuristic.rs  history_heuristic.rs  lmr.rs  mod.rs  move_order.rs  score.rs  see.rs  threats.rs  trend.rs
src/: args.rs  engine.rs  main.rs
src/args/: args.rs
src/engine/: def.rs  mod.rs
src/engine/minimax/: engine.rs  mod.rs  tt.rs  utils.rs
src/uci/: commands.rs  decoder.rs  encoder.rs  mod.rs
src/utils/: evaluation.rs  mod.rs  move_order.rs  pst.rs  values.rs
tournament/: Cargo.toml
tournament/src/: arena.rs  args.rs  engine.rs  game.rs  main.rs  openings.rs  outcome.rs  pairing.rs  positions.rs  summary.rs  utils.rs
uci/: Cargo.toml
uci/src/: commands.rs  connection.rs  decoder.rs  encoder.rs  helpers.rs  lib.rs  options.rs  utils.rs
utils/: Cargo.toml
utils/src/: attacks.rs  bits.rs  bitset.rs  board.rs  board_metrics.rs  eval.rs  lib.rs  material.rs  memory.rs  moves.rs  position.rs
