[workspace]
members = [
  "core",
  "evaluation",
  "search",
  "nnue", 
  "uci", 
  "tournament",
  "utils",
]

[workspace.dependencies]
ahash = "0.8.11"
arrayvec = "0.7"
chess = "3.2.0"
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
simplelog = "0.12.2"
num_cpus = "1.16.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
indicatif = "0.17.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false
