[workspace]
resolver = "2"
members = [
  "core",
  "evaluation",
  "hce",
  "search",
  "nnue", 
  "uci", 
  "utils",
]

[workspace.package]
version = "1.0.1"
authors = ["Jørgen Hanssen"]
edition = "2021"
license = "GPL-3.0"
description = "A UCI chess engine written in Rust"
repository = "https://github.com/jorgenhanssen/grail"

[workspace.dependencies]
ahash = "0.8.11"
arrayvec = "0.7"
cozy-chess = "0.3.4"
chrono = "0.4"
clap = { version = "4.5.23", features = ["derive"] }
ctrlc = "3.4.5"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
simplelog = "0.12.2"
num_cpus = "1.16.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
indicatif = "0.17.0"
tempfile = "3.14"
hyperloglogplus = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false
