[package]
name = "grail"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[features]
default = []
tuning = ["uci/tuning", "search/tuning"]

[dependencies]
search = { path = "../search" }
nnue = { path = "../nnue" }
hce = { path = "../hce" }
uci = { path = "../uci" }
evaluation = { path = "../evaluation" }

ahash = { workspace = true }
cozy-chess = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
simplelog = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "search"
harness = false
