[package]
name = "evaluation"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
arrayvec = { workspace = true }
chess = { workspace = true }
utils = { path = "../utils" }
