[package]
name = "hce"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
evaluation = { path = "../evaluation" }
utils = { path = "../utils" }
arrayvec = { workspace = true }
cozy-chess = { workspace = true }
