[package]
name = "nnue"
version = "0.1.0"
edition = "2021"

[dependencies]
search = { path = "../search" }

ahash = { workspace = true }
chess = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
num_cpus = { workspace = true }
simplelog = { workspace = true }
clap = { workspace = true }
candle-core = "0.8.2"
candle-nn = "0.8.2"
indicatif = "0.17.0"

[lib]
name = "nnue"

[[bin]]
name = "generate"
path = "src/bin/generate/main.rs"

[[bin]]
name = "train"
path = "src/bin/train/main.rs"
