[package]
name = "nnue"
version = "0.1.0"
edition = "2021"

[dependencies]
search = { path = "../search" }
evaluation = { path = "../evaluation" }
uci = { path = "../uci" }
utils = { path = "../utils" }

ahash = { workspace = true }
chess = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
num_cpus = { workspace = true }
simplelog = { workspace = true }
clap = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
indicatif = { workspace = true }

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
]

[lib]
name = "nnue"

[[bin]]
name = "generate"
path = "src/bin/generate/main.rs"

[[bin]]
name = "train"
path = "src/bin/train/main.rs"
