[package]
name = "nnue"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
search = { path = "../search" }
evaluation = { path = "../evaluation" }
uci = { path = "../uci" }
utils = { path = "../utils" }

ahash = { workspace = true }
cozy-chess = { workspace = true }
chrono = { workspace = true }
ctrlc = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
num_cpus = { workspace = true }
simplelog = { workspace = true }
clap = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
indicatif = { workspace = true }

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
]

[lib]
name = "nnue"

[[bin]]
name = "generate"
path = "src/bin/generate/main.rs"

[[bin]]
name = "train"
path = "src/bin/train/main.rs"
