[package]
name = "search"
version = "0.1.0"
edition = "2021"

[features]
tuning = []

[dependencies]
evaluation = { path = "../evaluation" }
uci = { path = "../uci" }
utils = { path = "../utils" }

arrayvec = { workspace = true }
chess = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }

[lib]
name = "search"
