[package]
name = "search"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[features]
tuning = []

[dependencies]
evaluation = { path = "../evaluation" }
uci = { path = "../uci" }
utils = { path = "../utils" }

arrayvec = { workspace = true }
chess = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }

[lib]
name = "search"
