[package]
name = "tournament"
version = "0.1.0"
edition = "2021"

[dependencies]
search = { path = "../search" }
nnue = { path = "../nnue" }
uci = { path = "../uci" }
evaluation = { path = "../evaluation" }

chess = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
simplelog = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
