[package]
name = "uci"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[features]
tuning = []

[dependencies]
cozy-chess = { workspace = true }
log = { workspace = true }
ahash = { workspace = true }
